<resources>
    <string name="app_name">GaraSchedule</string>
    <string name="label_preview">プレビュー</string>
    <string name="pdf_output">PDF出力</string>
    <string name="dimension_settings">寸法設定</string>
    <string name="apply">決定</string>
    <string name="input_too_small">入力が小さすぎます。</string>
    <string name="input_too_large">余白が大きすぎます。</string>
    <string name="pref_set">設定しました。</string>
    <string name="number_format_ex">数値のフォーマットが正しくありません。</string>
    <string name="err_internal">システムエラーです。</string>
    <string name="pdf_creation_failed">PDFの作成に失敗しました。</string>
    <string name="output_succeed">出力しました。</string>
    <string name="output_failed">出力に失敗しました：</string>
    <string name="time_format">%02d：%02d</string>
    <string name="next_sched_view_format">%s\n%s</string>
    <string name="sched_today">今日のスケジュール</string>
    <string name="sched_by_weekday">曜日別スケジュール</string>
    <string name="sched_man">スケジュール管理</string>
    <string name="sched_preview">スケジュールプレビュー</string>
    <string name="end_activity">終わる</string>
    <string name="error_title">エラー</string>
    <string name="today_is_week">今日は週%s</string>
    <string name="no_next">もうありません。</string>
    <string name="time_loc_format">%s～%s\n%s</string>
    <string name="week_1">週１</string>
    <string name="week_2">週２</string>
    <string name="select_weekday">曜日を選択</string>
    <string name="about_this_app">本ソフトについて</string>
    <string name="about_this_app_info">時間割 v1.0\nわたしのガラホのために書いた簡単なアプリ。自分が使えそうな機能だけを書いた。\nHoloを使っていますが、API 19 (Android 4.4以上)が必要。</string>
    <string name="course_man">授業管理</string>
    <string name="operations">操作</string>
    <string name="detail">見る</string>
    <string name="rename">名前変更</string>
    <string name="set_teacher">教師変更</string>
    <string name="set_desc">備考変更</string>
    <string name="remove">削除</string>
    <string name="detail_format">教師：%s\n備考：\n%s</string>
    <string name="new_name">新しい名前</string>
    <string name="changed_toast">変更しました。</string>
    <string name="runtime_error">実行エラー</string>
    <string name="new_teacher">新しい教師</string>
    <string name="description">備考</string>
    <string name="confirm_remove">削除しますか？</string>
    <string name="no">いいえ</string>
    <string name="yes">はい</string>
    <string name="removed_toast">削除しました。</string>
    <string name="remove_all">すべて削除</string>
    <string name="remove_all_prompt">本当に削除しますか？</string>
    <string name="course_format">%s : %s</string>
    <string name="change_loc">場所変更</string>
    <string name="period_detail_format">開始：%d\n終了：%d\n場所：%s\n</string>
    <string name="new_loc_title">新しい場所</string>
    <string name="period_format">%s（週%s %s%d～%d）</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="new_schedule">新規スケジュール</string>
    <string name="no_courses_yet">授業はありません。</string>
    <string name="start_gt_end">開始時間が終了時間より大きくてはいけません。</string>
    <string name="inserted">追加しました。</string>
    <string name="set_time">時間設定</string>
    <string name="start_time_format">%d</string>
    <string name="new_course">授業追加</string>
    <string name="warning">警告</string>
    <string name="please_enter_course_name">授業名を入力してください。</string>
    <string name="sql_error">SQLエラー</string>
    <string name="smma_new_course">授業追加</string>
    <string name="smma_man_course">授業管理＆削除</string>
    <string name="smma_new_sched">スケジュール追加</string>
    <string name="smma_man_sched">スケジュール管理＆削除</string>
    <string name="smma_import_db">データベース出力</string>
    <string name="smma_export_db">データベース入力</string>
    <string name="back">戻る</string>
    <string name="exported">出力できました。</string>
    <string name="fs_error">FSエラー</string>
    <string name="cannot_read_db">データベースを読み込めません。</string>
    <string name="strong_warning">警告！</string>
    <string name="warning_overwrite_db">これは既存のデータベースを上書きします。\nつづけますか？</string>
    <string name="imported">入力しました。</string>
    <string name="course_sched_count_format">授業%d件とスケジュール%d件あります。</string>
    <string name="err_no_intent">このアクティビティを直接起動しないでください。</string>
    <string name="weekday_format">週%sの%s曜日</string>
    <string name="item_info_format">%s～%s, %s</string>
    <string name="week_zero">０</string>
    <string name="week_one">１</string>
    <string name="week_two">２</string>
    <string name="week_both">１＆２</string>
    <string name="choose_schedule">管理したいスケジュールを選択してください。</string>
    <string name="course_name">授業</string>
    <string name="weekday">曜日</string>
    <string name="start_time">開始時間</string>
    <string name="end_time">終了時間</string>
    <string name="loc">場所</string>
    <string name="cb_week_1">第１週</string>
    <string name="cb_week_2">第２週</string>
    <string name="insert">追加</string>
    <string name="cancel">取り消し</string>
    <string name="course_name_hint">授業名</string>
    <string name="teacher_name">教師名</string>
    <string name="teacher_name_hint">教師の名前</string>
    <string name="item_count">合計？件あります。</string>
    <string name="margin">余白</string>
    <string name="width">幅</string>
    <string name="width_hint">幅（ピクセル単位）</string>
    <string name="height">高さ</string>
    <string name="height_hint">高さ（ピクセル単位）</string>
    <string name="use_default">省略時設定を使う</string>
    <string name="now">いま</string>
    <string name="choose_a_course">管理したい授業を選択してください。</string>
    <string name="toggle_week">切り替え</string>
    <string name="next_is">次の授業：</string>
    <string name="extract_from_json">JSONからスケジュールを作成</string>
    <string name="json_import_prompt">「%s%s」のスケジュールを入力しようとしています。\nこのスケジュールには授業%d件とスケジュール%d件があります。\n既存のデータは消えてしまいますが、つづけますか？</string>
    <string name="json_warning">JSON処理中に警告が出ています。\n%s</string>
    <string name="json_io_error">JSON入力にエラーが発生しました。</string>
    <string name="json_input_title">JSON入力</string>
</resources>