<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".NewSchedActivity"
        >

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:textSize="18sp"
                android:labelFor="@id/coursename"
                />
            <android.widget.EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/course_name_hint"
                android:singleLine="true"
                android:id="@+id/coursename"
                />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher_name"
                android:textSize="18sp"
                android:labelFor="@id/teachername"
                />
            <android.widget.EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/teacher_name_hint"
                android:singleLine="true"
                android:id="@+id/teachername"
                />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="18sp"
                android:labelFor="@id/course_desc"
                />
            <android.widget.EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/course_desc"
                />

        </android.widget.LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:id="@+id/course_add_btn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/course_cancel_button"
            />
    </android.widget.LinearLayout>

</android.widget.ScrollView>
