<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewPeriodActivity"
    >
    <android.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:layout_weight="0"
                android:textSize="18sp"
                android:labelFor="@id/p_course"
                />
            <android.widget.Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/p_course"
                />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekday"
                android:layout_weight="0"
                android:textSize="18sp"
                android:labelFor="@id/p_course"
                />
            <android.widget.Spinner
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/p_weekday"
                />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="18sp"
                android:layout_weight="0"
                android:labelFor="@id/p_start"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_weight="1"
                android:id="@+id/p_start"
                />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="18sp"
                android:layout_weight="0"
                android:labelFor="@id/p_end"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_weight="1"
                android:id="@+id/p_end"
                />

        </android.widget.LinearLayout>

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.widget.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loc"
                android:textSize="18sp"
                android:layout_weight="0"
                android:labelFor="@id/p_loc"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/p_loc"
                />

        </android.widget.LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_week_1"
            android:id="@+id/p_c1"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_week_2"
            android:id="@+id/p_c2"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert"
            android:id="@+id/p_add_btn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/p_cancel_btn"
            />
    </android.widget.LinearLayout>

</ScrollView>